force-app/main/default/objects/Callout_Configuration__mdt/Callout_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Contains configuration for callouts so that values aren&apos;t hard coded in the code.</description>
    <label>Callout Configuration</label>
    <pluralLabel>Callout Configurations</pluralLabel>
</CustomObject>