force-app/main/default/objects/Callout_Configuration__mdt/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <description>The Name of the Named Credential.</description>
    <label>Named Credential Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>