force-app/main/default/objects/Callout_Configuration__mdt/fields/Static_Base_URL_Addition__c.field-meta.xml
<CustomField>
    <fullName>Static_Base_URL_Addition__c</fullName>
    <description>Static value to add to the Base URL configured in the Named Credential.</description>
    <label>Static Base URL Addition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>