force-app/main/default/objects/Callout_Configuration__mdt/listViews/All_Configs.listView-meta.xml
<ListView>
    <fullName>All_Configs</fullName>
    <columns>DeveloperName</columns>
    <columns>Named_Credential_Name__c</columns>
    <columns>Static_Base_URL_Addition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configs</label>
</ListView>